Update SAP HANA and Python - technical verification use case-GITHUB.ipynb

--- a/SAP HANA and Python - technical verification use case-GITHUB.ipynb
+++ b/SAP HANA and Python - technical verification use case-GITHUB.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "## Architecture\n",
     "\n",
-    "<img src=\"02 Misc/architecture.PNG\"\n",
+    "<img src=\"architecture.PNG\"\n",
     "     alt=\"Markdown Monster icon\"\n",
     "     style=\"float: left; margin-right: 10px;\" />  \n",
     "AFL - Application Function Library  \n",
